--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "react-dom": "^16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-reanimated": "~1.1.0",
+    "react-native-gesture-handler": "~1.4.1",
+    "react-native-reanimated": "~1.2.0",
     "react-native-size-matters": "^0.2.1",
-    "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1"
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^3.12.0"
   },
   "devDependencies": {
+    "@types/expo": "^32.0.13",
     "@types/react": "^16.9.2",
-    "@types/react-native": "^0.60.6",
+    "@types/react-native": "^0.60.8",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "babel-preset-expo": "^6.0.0",
@@ -43,10 +44,8 @@
     "typescript": "^3.5.3"
   },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint **/*.{js,jsx,ts,tsx}",
+    "start": "expo start"
   }
 }
