--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "Twenty Timer",
+    "description": "A minimalist 20-20-20 eye care timer",
     "slug": "twenty-timer",
     "privacy": "public",
     "sdkVersion": "34.0.0",
@@ -19,6 +20,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "githubUrl": "https://github.com/bdbaraban/twenty-timer"
   }
 }
