Clear out irrelevant ignores, add yarn-error.log and .jest

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 node_modules/**/*
 .expo/*
 .expo-shared/*
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
-web-report/
 yarn.lock
+yarn-error.log
+.jest
