--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,8 @@ workflows:
           requires:
             - checkout
       - clean
+          requires:
+            - checkout
 
   release:
     jobs:
@@ -140,6 +142,8 @@ workflows:
               only: /v[0-9]+(\.[0-9]+)*/
             branches:
               ignore: /.*/
+          requires:
+            - checkout
       - publish:
           filters:
             tags:
