Fix parsing error in clean method of build workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ workflows:
       - lint:
           requires:
             - checkout
-      - clean
+      - clean:
           requires:
             - checkout
 
