Attach directory workspace for clean job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,9 @@ jobs:
     <<: *defaults
 
     steps:
+      - attach_workspace:
+          at: ~/twenty-timer
+
       - run:
           name: Clean Expo cache
           command: yarn clean
