Make expo publish command non-interactive so that it works automatically in CircleCI job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ jobs:
     steps:
       - run:
           name: Publish to Expo
-          command: npx expo publish
+          command: npx expo publish --non-interactive
 
 workflows:
   version: 2
