--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
     "eslint-plugin-react-native": "^3.7.0",
+    "expo-cli": "^3.0.10",
     "jest-expo": "^34.0.1",
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.9.0",
